Fixing align as per #5

--- a/src/modules/trident/sass/layout.sass
+++ b/src/modules/trident/sass/layout.sass
@@ -32,6 +32,8 @@ body
   margin-bottom: 10px
 
 .on-demand
+  .col-md-4
+    padding-left: 0
   .on-demand-menu
     .list-group-item
       background-color: #0097C7
